# smart-contracts

./: .gitignore  README.md
.github/workflows/: docker.yml  ethereum.yml  near.yml  node.js.yml  slither.yml
ethereum/kycdao-ntnft/: .env.example  .gitignore  .solcover.js  CHANGELOG.md  README.md  Upgrades.md  constructorArgs.js  hardhat.config.js  hardhat.config.ts  initArgs.js  loadenv.js  metadata_example.json  package-lock.json  package.json  priceFeeds.js
ethereum/kycdao-ntnft/.openzeppelin/: unknown-31337.json
ethereum/kycdao-ntnft/contracts/: Create2Deployer.sol  Create2DeployerLocal.sol  KycdaoNTNFT.sol  KycdaoNTNFTAccreditation.sol  NTConsumerExample.sol  NaivePaymaster.sol  PriceFeed.sol  ProxyUUPS.sol  TestPriceFeed.sol
ethereum/kycdao-ntnft/deployments/: hardhat_deployment_debug.json  localhost_deployment_debug.json  mumbai_deployment.json  polygon_deployment_debug.json  rinkeby_deployment.json  rinkeby_deployment_debug.json
ethereum/kycdao-ntnft/scripts/: deploy.ts  deploy_accred.ts  upgrade.ts  upgrade_accred.ts
ethereum/kycdao-ntnft/tasks/: constants.ts  createProxy.ts  deploy.ts  deploy_zkSync.ts  testUpgrade.ts  upgrade.ts  utils.ts
ethereum/kycdao-ntnft/test/: KycdaoNTNFT.ts  KycdaoNTNFT_Accred.ts  KycdaoNTNFT_gsn.js  KycdaoNTNFT_upgrade.ts
near/kycdao-ntnft/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
near/kycdao-ntnft/src/: lib.rs  price_feed.rs
solana/kycdao-ntnft/: Anchor.toml  README.md  package-lock.json
solana/kycdao-ntnft/backend/: Cargo.toml
solana/kycdao-ntnft/backend/src/: main.rs
(+18 files in other folders)
